--- a/2-compound/src/style.css
+++ b/2-compound/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,900');
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -23,4 +25,8 @@ main {
   max-width: 1200px;
   margin: auto;
   justify-content: center;
+}
+
+main > div:not(:last-child) {
+  margin-right: 20px;
 }
